Sửa lỗi phần khám phá câu hỏi số 2

--- a/Duong.ipynb
+++ b/Duong.ipynb
@@ -1314,84 +1314,166 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.00000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>10.0</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>5304.855556</td>\n",
+       "      <td>4912.441000</td>\n",
+       "      <td>5054.721000</td>\n",
+       "      <td>5169.049000</td>\n",
+       "      <td>5250.780000</td>\n",
+       "      <td>5303.060000</td>\n",
+       "      <td>5311.040000</td>\n",
+       "      <td>5334.54000</td>\n",
+       "      <td>5370.860000</td>\n",
+       "      <td>5428.240000</td>\n",
+       "      <td>5465.920000</td>\n",
+       "      <td>5360.958000</td>\n",
+       "      <td>4907.210000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>1818.3</td>\n",
-       "      <td>19169.96</td>\n",
-       "      <td>107.21</td>\n",
-       "      <td>105.21</td>\n",
-       "      <td>128.1</td>\n",
-       "      <td>21229.9</td>\n",
-       "      <td>20986.3</td>\n",
-       "      <td>20178.6</td>\n",
-       "      <td>8928.0</td>\n",
-       "      <td>4984.6</td>\n",
-       "      <td>113.6</td>\n",
-       "      <td>17884.14</td>\n",
-       "      <td>6928.5</td>\n",
+       "      <th>std</th>\n",
+       "      <td>5705.962367</td>\n",
+       "      <td>5728.589235</td>\n",
+       "      <td>6053.084008</td>\n",
+       "      <td>6221.623627</td>\n",
+       "      <td>6352.000094</td>\n",
+       "      <td>6270.799245</td>\n",
+       "      <td>6184.834597</td>\n",
+       "      <td>5967.81914</td>\n",
+       "      <td>5889.879936</td>\n",
+       "      <td>5753.683206</td>\n",
+       "      <td>5688.377074</td>\n",
+       "      <td>5457.459752</td>\n",
+       "      <td>4179.997403</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>min</th>\n",
+       "      <td>460.000000</td>\n",
+       "      <td>108.390000</td>\n",
+       "      <td>107.210000</td>\n",
+       "      <td>105.210000</td>\n",
+       "      <td>128.100000</td>\n",
+       "      <td>137.300000</td>\n",
+       "      <td>123.000000</td>\n",
+       "      <td>124.70000</td>\n",
+       "      <td>132.500000</td>\n",
+       "      <td>106.100000</td>\n",
+       "      <td>113.600000</td>\n",
+       "      <td>106.280000</td>\n",
+       "      <td>244.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1818.300000</td>\n",
+       "      <td>963.400000</td>\n",
+       "      <td>1019.495000</td>\n",
+       "      <td>1068.765000</td>\n",
+       "      <td>1092.975000</td>\n",
+       "      <td>1106.125000</td>\n",
+       "      <td>1159.075000</td>\n",
+       "      <td>1162.95000</td>\n",
+       "      <td>1173.075000</td>\n",
+       "      <td>1280.350000</td>\n",
+       "      <td>1267.250000</td>\n",
+       "      <td>1195.405000</td>\n",
+       "      <td>1253.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3188.100000</td>\n",
+       "      <td>2994.625000</td>\n",
+       "      <td>3103.840000</td>\n",
+       "      <td>3283.960000</td>\n",
+       "      <td>3330.250000</td>\n",
+       "      <td>3603.700000</td>\n",
+       "      <td>4051.800000</td>\n",
+       "      <td>4335.15000</td>\n",
+       "      <td>4479.850000</td>\n",
+       "      <td>4398.800000</td>\n",
+       "      <td>4143.550000</td>\n",
+       "      <td>4112.050000</td>\n",
+       "      <td>4794.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>7051.300000</td>\n",
+       "      <td>6908.162500</td>\n",
+       "      <td>6838.087500</td>\n",
+       "      <td>6454.387500</td>\n",
+       "      <td>6322.450000</td>\n",
+       "      <td>6391.275000</td>\n",
+       "      <td>6181.000000</td>\n",
+       "      <td>6545.42500</td>\n",
+       "      <td>6691.150000</td>\n",
+       "      <td>6982.725000</td>\n",
+       "      <td>7533.300000</td>\n",
+       "      <td>7290.487500</td>\n",
+       "      <td>7087.050000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>18808.600000</td>\n",
+       "      <td>19169.960000</td>\n",
+       "      <td>20430.400000</td>\n",
+       "      <td>21019.340000</td>\n",
+       "      <td>21466.500000</td>\n",
+       "      <td>21229.900000</td>\n",
+       "      <td>20986.300000</td>\n",
+       "      <td>20178.60000</td>\n",
+       "      <td>19908.300000</td>\n",
+       "      <td>19228.400000</td>\n",
+       "      <td>18837.700000</td>\n",
+       "      <td>17884.140000</td>\n",
+       "      <td>12628.900000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          2009      2010    2011    2012   2013     2014     2015     2016  \\\n",
-       "count      9.0     10.00   10.00   10.00   10.0     10.0     10.0     10.0   \n",
-       "unique     9.0     10.00   10.00   10.00   10.0     10.0     10.0     10.0   \n",
-       "top     1818.3  19169.96  107.21  105.21  128.1  21229.9  20986.3  20178.6   \n",
-       "freq       1.0      1.00    1.00    1.00    1.0      1.0      1.0      1.0   \n",
+       "               2009          2010          2011          2012          2013  \\\n",
+       "count      9.000000     10.000000     10.000000     10.000000     10.000000   \n",
+       "mean    5304.855556   4912.441000   5054.721000   5169.049000   5250.780000   \n",
+       "std     5705.962367   5728.589235   6053.084008   6221.623627   6352.000094   \n",
+       "min      460.000000    108.390000    107.210000    105.210000    128.100000   \n",
+       "25%     1818.300000    963.400000   1019.495000   1068.765000   1092.975000   \n",
+       "50%     3188.100000   2994.625000   3103.840000   3283.960000   3330.250000   \n",
+       "75%     7051.300000   6908.162500   6838.087500   6454.387500   6322.450000   \n",
+       "max    18808.600000  19169.960000  20430.400000  21019.340000  21466.500000   \n",
        "\n",
-       "          2017    2018   2019      2020  Sơ bộ 2021  \n",
-       "count     10.0    10.0   10.0     10.00        10.0  \n",
-       "unique    10.0    10.0   10.0     10.00        10.0  \n",
-       "top     8928.0  4984.6  113.6  17884.14      6928.5  \n",
-       "freq       1.0     1.0    1.0      1.00         1.0  "
+       "               2014          2015         2016          2017          2018  \\\n",
+       "count     10.000000     10.000000     10.00000     10.000000     10.000000   \n",
+       "mean    5303.060000   5311.040000   5334.54000   5370.860000   5428.240000   \n",
+       "std     6270.799245   6184.834597   5967.81914   5889.879936   5753.683206   \n",
+       "min      137.300000    123.000000    124.70000    132.500000    106.100000   \n",
+       "25%     1106.125000   1159.075000   1162.95000   1173.075000   1280.350000   \n",
+       "50%     3603.700000   4051.800000   4335.15000   4479.850000   4398.800000   \n",
+       "75%     6391.275000   6181.000000   6545.42500   6691.150000   6982.725000   \n",
+       "max    21229.900000  20986.300000  20178.60000  19908.300000  19228.400000   \n",
+       "\n",
+       "               2019          2020    Sơ bộ 2021  \n",
+       "count     10.000000     10.000000     10.000000  \n",
+       "mean    5465.920000   5360.958000   4907.210000  \n",
+       "std     5688.377074   5457.459752   4179.997403  \n",
+       "min      113.600000    106.280000    244.800000  \n",
+       "25%     1267.250000   1195.405000   1253.700000  \n",
+       "50%     4143.550000   4112.050000   4794.700000  \n",
+       "75%     7533.300000   7290.487500   7087.050000  \n",
+       "max    18837.700000  17884.140000  12628.900000  "
       ]
      },
      "execution_count": 15,
@@ -1400,6 +1482,7 @@
     }
    ],
    "source": [
+    "phan_bo_lao_dong_theo_nghe_nghiep = phan_bo_lao_dong_theo_nghe_nghiep.astype('float')\n",
     "phan_bo_lao_dong_theo_nghe_nghiep.describe()"
    ]
   },
